[metadata]
name = ScapySMS
version = 0.0.1
author = Harrison Sand
author_email = me@harrisonsand.com
description = A Scapy implementation of SMS-SUBMIT and (U)SIM Application Toolkit command packets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mnemonic-no/ScapySMS
project_urls =
    Bug Tracker = https://github.com/mnemonic-no/ScapySMS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    scapy
    pyserial

[options.packages.find]
where = src
